# MarketCompetitionMetrics

./: DESCRIPTION  LICENSE  MANIFEST.in  MarketCompetitionMetrics.R  NAMESPACE  README.md  Synthetic_Market_Data.csv  Synthetic_Market_Data.xlsx  paper.bib  paper.md  pyproject.toml  pytest.ini
R/: MarketCompetitionMetrics.R
examples/: python_example.py  r_example.R
inst/extdata/: Synthetic_Market_Data.csv  exemple
market_competition_metrics/: __init__.py  market_competition_metrics.py
tests/pytest/: _helpers.py  test_boone.py  test_hhi.py  test_lerner.py  test_panzar_rosse.py
tests/testthat/: helper.R  test-boone.R  test-hhi.R  test-lerner.R  test-panzar_rosse.R
